Adding paths for multiple robots

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REGISTRY_URL=ghcr.io/sharp-rmf
-; HOSTNAME=rmf-deployment-template.open-rmf.org
-; DEMO_NAME=galen
+# HOSTNAME=rmf-deployment-template.open-rmf.org
+# DEMO_NAME=galen
 
 ROS_DOMAIN_ID=15
 DDS_ENV=CYCLONEDDS_URI
@@ -21,74 +21,74 @@ FLEET_LAUNCH_FILE=./rmf/demos/tinyRobot_adapter.launch.xml
 FLEET_LAUNCH_FILE_MOUNTPATH=/opt/rmf/install/rmf_demos/share/rmf_demos/include/adapters/tinyRobot_adapter.launch.xml
 
 # Fleet Adapter Neuronbot
-; NEURONBOT_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
-; NEURONBOT_RMF_FLEET_ADAPTER_FLEET_NAME=neuronbot
-; NEURONBOT_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/0.yaml
-; NEURONBOT_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
-; NEURONBOT_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
-; NEURONBOT_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
-; NEURONBOT_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
-; NEURONBOT_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
-; NEURONBOT_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
-; NEURONBOT_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
-; NEURONBOT_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
-; NEURONBOT_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
-; NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
-; NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
-; NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
-; NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
-; NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
-; NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
-; NEURONBOT_RMF_FLEET_ADAPTER_MASS=20.0
-; NEURONBOT_RMF_FLEET_ADAPTER_INERTIA=10.0
-; NEURONBOT_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
-; NEURONBOT_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
-; NEURONBOT_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
-; NEURONBOT_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
-; NEURONBOT_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
-; NEURONBOT_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+# NEURONBOT_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+# NEURONBOT_RMF_FLEET_ADAPTER_FLEET_NAME=neuronbot
+# NEURONBOT_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/0.yaml
+# NEURONBOT_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+# NEURONBOT_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+# NEURONBOT_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+# NEURONBOT_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+# NEURONBOT_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+# NEURONBOT_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+# NEURONBOT_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+# NEURONBOT_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+# NEURONBOT_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+# NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+# NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+# NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+# NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+# NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+# NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+# NEURONBOT_RMF_FLEET_ADAPTER_MASS=20.0
+# NEURONBOT_RMF_FLEET_ADAPTER_INERTIA=10.0
+# NEURONBOT_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+# NEURONBOT_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+# NEURONBOT_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+# NEURONBOT_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+# NEURONBOT_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+# NEURONBOT_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
 
 # Fleet Adapter Magni
-; MAGNI_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
-; MAGNI_RMF_FLEET_ADAPTER_FLEET_NAME=magni
-; MAGNI_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/1.yaml
-; MAGNI_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
-; MAGNI_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
-; MAGNI_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
-; MAGNI_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
-; MAGNI_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
-; MAGNI_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
-; MAGNI_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
-; MAGNI_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
-; MAGNI_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
-; MAGNI_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
-; MAGNI_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
-; MAGNI_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
-; MAGNI_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
-; MAGNI_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
-; MAGNI_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
-; MAGNI_RMF_FLEET_ADAPTER_MASS=20.0
-; MAGNI_RMF_FLEET_ADAPTER_INERTIA=10.0
-; MAGNI_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
-; MAGNI_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
-; MAGNI_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
-; MAGNI_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
-; MAGNI_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
-; MAGNI_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+# MAGNI_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+# MAGNI_RMF_FLEET_ADAPTER_FLEET_NAME=magni
+# MAGNI_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/1.yaml
+# MAGNI_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+# MAGNI_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+# MAGNI_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+# MAGNI_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+# MAGNI_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+# MAGNI_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+# MAGNI_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+# MAGNI_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+# MAGNI_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+# MAGNI_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+# MAGNI_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+# MAGNI_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+# MAGNI_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+# MAGNI_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+# MAGNI_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+# MAGNI_RMF_FLEET_ADAPTER_MASS=20.0
+# MAGNI_RMF_FLEET_ADAPTER_INERTIA=10.0
+# MAGNI_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+# MAGNI_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+# MAGNI_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+# MAGNI_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+# MAGNI_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+# MAGNI_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
 
 # TRANSFORMATION
-; RMF_FREE_FLEET_SERVER_TRANSLATION_X=9.0627
-; RMF_FREE_FLEET_SERVER_TRANSLATION_Y=10.3576
-; RMF_FREE_FLEET_SERVER_ROTATION=-1.5034
-; RMF_FREE_FLEET_SERVER_SCALE=0.9937
+# RMF_FREE_FLEET_SERVER_TRANSLATION_X=9.0627
+# RMF_FREE_FLEET_SERVER_TRANSLATION_Y=10.3576
+# RMF_FREE_FLEET_SERVER_ROTATION=-1.5034
+# RMF_FREE_FLEET_SERVER_SCALE=0.9937
 
-; # Free Fleet Server Neruonbot
-; NEURONBOT_RMF_FREE_FLEET_SERVER_FLEET_NAME=neuronbot
-; NEURONBOT_RMF_FREE_FLEET_SERVER_DDS_DOMAIN=5
+# # Free Fleet Server Neruonbot
+# NEURONBOT_RMF_FREE_FLEET_SERVER_FLEET_NAME=neuronbot
+# NEURONBOT_RMF_FREE_FLEET_SERVER_DDS_DOMAIN=5
 
-; # Free Fleet Server Magni
-; MAGNI_RMF_FREE_FLEET_SERVER_FLEET_NAME=magni
-; MAGNI_RMF_FREE_FLEET_SERVER_DDS_DOMAIN=1
+# # Free Fleet Server Magni
+# MAGNI_RMF_FREE_FLEET_SERVER_FLEET_NAME=magni
+# MAGNI_RMF_FREE_FLEET_SERVER_DDS_DOMAIN=1
 
 # RMF_BUILDING_MAP_SERVER_CONFIG_PATH=/opt/rmf/src/rmf/rmf_demos/rmf_demos_maps/maps/office/office.building.yaml
 RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
