--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REGISTRY_URL=ghcr.io/sharp-rmf
 # HOSTNAME=rmf-deployment-template.open-rmf.org
-# DEMO_NAME=galen
+DEMO_NAME=galen
 
 ROS_DOMAIN_ID=15
 DDS_ENV=CYCLONEDDS_URI
@@ -20,80 +20,304 @@ NAV_GRAPH_FILES_MOUNTPATH=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/m
 FLEET_LAUNCH_FILE=./rmf/demos/tinyRobot_adapter.launch.xml
 FLEET_LAUNCH_FILE_MOUNTPATH=/opt/rmf/install/rmf_demos/share/rmf_demos/include/adapters/tinyRobot_adapter.launch.xml
 
-# Fleet Adapter Neuronbot
-# NEURONBOT_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
-# NEURONBOT_RMF_FLEET_ADAPTER_FLEET_NAME=neuronbot
-# NEURONBOT_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/0.yaml
-# NEURONBOT_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
-# NEURONBOT_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
-# NEURONBOT_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
-# NEURONBOT_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
-# NEURONBOT_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
-# NEURONBOT_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
-# NEURONBOT_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
-# NEURONBOT_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
-# NEURONBOT_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
-# NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
-# NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
-# NEURONBOT_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
-# NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
-# NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
-# NEURONBOT_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
-# NEURONBOT_RMF_FLEET_ADAPTER_MASS=20.0
-# NEURONBOT_RMF_FLEET_ADAPTER_INERTIA=10.0
-# NEURONBOT_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
-# NEURONBOT_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
-# NEURONBOT_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
-# NEURONBOT_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
-# NEURONBOT_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
-# NEURONBOT_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+# Fleet Adapter TinyRobotA
+TINYROBOTA_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTA_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotA
+TINYROBOTA_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTA_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTA_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTA_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTA_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTA_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTA_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTA_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTA_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTA_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTA_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTA_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTA_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTA_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTA_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTA_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTA_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTA_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTA_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTA_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTA_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTA_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTA_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTA_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
 
-# Fleet Adapter Magni
-# MAGNI_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
-# MAGNI_RMF_FLEET_ADAPTER_FLEET_NAME=magni
-# MAGNI_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/1.yaml
-# MAGNI_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
-# MAGNI_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
-# MAGNI_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
-# MAGNI_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
-# MAGNI_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
-# MAGNI_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
-# MAGNI_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
-# MAGNI_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
-# MAGNI_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
-# MAGNI_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
-# MAGNI_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
-# MAGNI_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
-# MAGNI_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
-# MAGNI_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
-# MAGNI_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
-# MAGNI_RMF_FLEET_ADAPTER_MASS=20.0
-# MAGNI_RMF_FLEET_ADAPTER_INERTIA=10.0
-# MAGNI_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
-# MAGNI_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
-# MAGNI_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
-# MAGNI_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
-# MAGNI_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
-# MAGNI_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+# Fleet Adapter TinyRobotB
+TINYROBOTB_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTB_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotB
+TINYROBOTB_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTB_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTB_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTB_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTB_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTB_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTB_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTB_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTB_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTB_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTB_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTB_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTB_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTB_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTB_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTB_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTB_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTB_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTB_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTB_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTB_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTB_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTB_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTB_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+
+# Fleet Adapter TinyRobotC
+TINYROBOTC_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTC_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotC
+TINYROBOTC_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTC_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTC_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTC_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTC_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTC_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTC_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTC_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTC_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTC_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTC_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTC_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTC_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTC_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTC_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTC_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTC_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTC_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTC_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTC_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTC_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTC_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTC_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTC_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+
+# Fleet Adapter TinyRobotD
+TINYROBOTD_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTD_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotD
+TINYROBOTD_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTD_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTD_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTD_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTD_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTD_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTD_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTD_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTD_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTD_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTD_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTD_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTD_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTD_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTD_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTD_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTD_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTD_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTD_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTD_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTD_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTD_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTD_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTD_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+
+# Fleet Adapter TinyRobotE
+TINYROBOTE_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTE_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotE
+TINYROBOTE_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTE_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTE_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTE_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTE_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTE_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTE_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTE_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTE_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTE_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTE_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTE_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTE_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTE_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTE_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTE_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTE_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTE_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTE_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTE_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTE_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTE_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTE_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTE_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+
+# Fleet Adapter TinyRobotF
+TINYROBOTF_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTF_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotF
+TINYROBOTF_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTF_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTF_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTF_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTF_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTF_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTF_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTF_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTF_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTF_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTF_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTF_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTF_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTF_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTF_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTF_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTF_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTF_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTF_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTF_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTF_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTF_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTF_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTF_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+
+# Fleet Adapter TinyRobotG
+TINYROBOTG_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTG_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotG
+TINYROBOTG_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTG_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTG_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTG_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTG_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTG_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTG_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTG_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTG_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTG_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTG_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTG_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTG_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTG_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTG_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTG_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTG_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTG_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTG_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTG_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTG_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTG_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTG_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTG_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+
+# Fleet Adapter TinyRobotH
+TINYROBOTH_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTH_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotH
+TINYROBOTH_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTH_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTH_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTH_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTH_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTH_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTH_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTH_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTH_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTH_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTH_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTH_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTH_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTH_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTH_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTH_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTH_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTH_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTH_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTH_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTH_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTH_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTH_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTH_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+
+# Fleet Adapter TinyRobotI
+TINYROBOTI_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTI_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotI
+TINYROBOTI_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTI_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTI_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTI_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTI_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTI_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTI_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTI_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTI_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTI_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTI_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTI_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTI_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTI_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTI_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTI_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTI_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTI_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTI_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTI_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTI_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTI_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTI_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTI_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
+
+# Fleet Adapter TinyRobotJ
+TINYROBOTJ_RMF_FLEET_ADAPTER_CONTROL_TYPE=full_control
+TINYROBOTJ_RMF_FLEET_ADAPTER_FLEET_NAME=tinyRobotJ
+TINYROBOTJ_RMF_FLEET_ADAPTER_NAV_GRAPH_FILE=/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/2.yaml
+TINYROBOTJ_RMF_FLEET_ADAPTER_LINEAR_VELOCITY=0.6
+TINYROBOTJ_RMF_FLEET_ADAPTER_ANGULAR_VELOCITY=0.6
+TINYROBOTJ_RMF_FLEET_ADAPTER_LINEAR_ACCELERATION=0.75
+TINYROBOTJ_RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION=2.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS=0.3
+TINYROBOTJ_RMF_FLEET_ADAPTER_VICINITY_RADIUS=1.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_DELAY_THRESHOLD=15.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_RETRY_WAIT=10.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT=60.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_PERFORM_DELIVERIES=true
+TINYROBOTJ_RMF_FLEET_ADAPTER_PERFORM_LOOP=true
+TINYROBOTJ_RMF_FLEET_ADAPTER_PERFORM_CLEANING=true
+TINYROBOTJ_RMF_FLEET_ADAPTER_BATTERY_VOLTAGE=12.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_BATTERY_CAPACITY=24.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT=5.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_MASS=20.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_INERTIA=10.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT=0.22
+TINYROBOTJ_RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN=20.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN=0.0
+TINYROBOTJ_RMF_FLEET_ADAPTER_DRAIN_BATTERY=false
+TINYROBOTJ_RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD=0.1
+TINYROBOTJ_RMF_FLEET_ADAPTER_SERVER_URI=ws://localhost:8001
 
 # TRANSFORMATION
-# RMF_FREE_FLEET_SERVER_TRANSLATION_X=9.0627
-# RMF_FREE_FLEET_SERVER_TRANSLATION_Y=10.3576
-# RMF_FREE_FLEET_SERVER_ROTATION=-1.5034
-# RMF_FREE_FLEET_SERVER_SCALE=0.9937
+RMF_FREE_FLEET_SERVER_TRANSLATION_X=9.0627
+RMF_FREE_FLEET_SERVER_TRANSLATION_Y=10.3576
+RMF_FREE_FLEET_SERVER_ROTATION=-1.5034
+RMF_FREE_FLEET_SERVER_SCALE=0.9937
 
-# # Free Fleet Server Neruonbot
-# NEURONBOT_RMF_FREE_FLEET_SERVER_FLEET_NAME=neuronbot
-# NEURONBOT_RMF_FREE_FLEET_SERVER_DDS_DOMAIN=5
+# Free Fleet Server Neruonbot
+NEURONBOT_RMF_FREE_FLEET_SERVER_FLEET_NAME=neuronbot
+NEURONBOT_RMF_FREE_FLEET_SERVER_DDS_DOMAIN=5
 
-# # Free Fleet Server Magni
-# MAGNI_RMF_FREE_FLEET_SERVER_FLEET_NAME=magni
-# MAGNI_RMF_FREE_FLEET_SERVER_DDS_DOMAIN=1
+# Free Fleet Server Magni
+MAGNI_RMF_FREE_FLEET_SERVER_FLEET_NAME=magni
+MAGNI_RMF_FREE_FLEET_SERVER_DDS_DOMAIN=1
 
 # RMF_BUILDING_MAP_SERVER_CONFIG_PATH=/opt/rmf/src/rmf/rmf_demos/rmf_demos_maps/maps/office/office.building.yaml
 RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 
-RMF_USE_SIM_TIME=false
+RMF_USE_SIM_TIME=true
 RMF_BIDDING_TIME_WINDOW=2.0
 RMF_TRAJECTORY_VISUALIZER_LEVEL_NAME=L1
 RMF_FAILOVER_MODE=false
