Adding stress test with 10 tinyRobots

--- a/rmf/demos/nav_graphs/2.yaml
+++ b/rmf/demos/nav_graphs/2.yaml
@@ -162,27 +162,27 @@ levels:
     - - 7.7578348678404
       - -8.559141324118706
       - {lift: A, lift_cabin: A, name: ''}
-    - - 10.691288332598015
-      - -10.838484294231613
+    - - 10.79332956976259
+      - -12.450212553036176
       - {is_charger: true, is_parking_spot: true, name: l1_1, spawn_robot_name: tinyRobotA1,
         spawn_robot_type: TinyRobot}
-    - - 12.99755533468404
-      - -9.76641829384747
+    - - 14.478461494559662
+      - -11.773651298188177
       - {name: l1_2, spawn_robot_name: tinyRobotB1, spawn_robot_type: TinyRobot}
-    - - 13.040431222591073
-      - -8.362064162183817
+    - - 14.852697098850582
+      - -8.649872779827488
       - {name: l1_3, spawn_robot_name: tinyRobotC1, spawn_robot_type: TinyRobot}
-    - - 12.954679446777005
-      - -5.54263692687975
+    - - 14.838348868645472
+      - -5.252633874028238
       - {name: l1_6, spawn_robot_name: tinyRobotF1, spawn_robot_type: TinyRobot}
-    - - 12.290018782863834
-      - -4.492093271803273
+    - - 14.95347231570294
+      - -3.6403992070987874
       - {name: l1_7, spawn_robot_name: tinyRobotG1, spawn_robot_type: TinyRobot}
-    - - 12.611672343520736
-      - -7.418710226874924
+    - - 14.737573651793113
+      - -7.066418974662406
       - {name: l1_4, spawn_robot_name: tinyRobotD1, spawn_robot_type: TinyRobot}
-    - - 12.161391119142731
-      - -6.5825460113336165
+    - - 12.074457724370596
+      - -6.864952942311835
       - {name: l1_5, spawn_robot_name: tinyRobotE1, spawn_robot_type: TinyRobot}
     - - 7.7578348678404
       - -2.85090894040116
@@ -190,27 +190,27 @@ levels:
     - - 9.462067010790848
       - -2.8801962102904137
       - {name: ''}
-    - - 9.584702178367463
-      - -1.008005372586034
-      - {name: l1_13, spawn_robot_name: tinyRobotM1, spawn_robot_type: TinyRobot}
-    - - 10.986861874823276
-      - -1.3196151720993587
-      - {name: l1_12, spawn_robot_name: tinyRobotL1, spawn_robot_type: TinyRobot}
-    - - 11.736599103717333
-      - -2.0985552695285232
-      - {name: l1_11, spawn_robot_name: tinyRobotK1, spawn_robot_type: TinyRobot}
-    - - 11.795004840787547
-      - -3.16969285501704
+    - - 9.742532710623669
+      - -0.11368862403695787
+      - {name: l1_13}
+    - - 11.36911560775823
+      - -0.2863737946231611
+      - {name: l1_12}
+    - - 13.110906353304406
+      - -0.3871490114755202
+      - {name: l1_11}
+    - - 14.881562361969097
+      - -0.9629350494711599
       - {name: l1_10, spawn_robot_name: tinyRobotJ1, spawn_robot_type: TinyRobot}
     - - 9.477596859954026
       - -4.046032115132655
       - {name: l1_9, spawn_robot_name: tinyRobotI1, spawn_robot_type: TinyRobot}
-    - - 13.299543379824524
-      - -3.3619591397655104
-      - {name: l1_15, spawn_robot_name: tinyRobotO1, spawn_robot_type: TinyRobot}
-    - - 8.389241398219378
-      - -1.0181335350837586
-      - {name: l1_14, spawn_robot_name: tinyRobotN1, spawn_robot_type: TinyRobot}
+    - - 15.111809256084035
+      - -2.258495835638423
+      - {name: l1_15}
+    - - 7.741629807844041
+      - -0.2000312093300595
+      - {name: l1_14}
   L5:
     lanes:
     - - 0
@@ -367,26 +367,26 @@ levels:
     - - 7.885886174730295
       - -8.489404643662908
       - {lift: A, lift_cabin: A, name: ''}
-    - - 10.626437423426857
-      - -10.739960762174007
+    - - 9.487846787380342
+      - -11.397596533325608
       - {name: l2_1}
-    - - 12.000680611624524
-      - -10.373612316944463
+    - - 11.524643724312064
+      - -11.757846380916323
       - {name: l2_2}
-    - - 12.43148441216254
-      - -8.73187892642278
+    - - 14.15735566377331
+      - -11.289104373728076
       - {name: l2_3}
-    - - 12.337838933916025
-      - -7.349402164823256
+    - - 14.209165664064493
+      - -8.705916355095681
       - {name: l2_4}
-    - - 12.080926119396004
-      - -6.623663821830044
+    - - 14.106298099613035
+      - -6.767554194421549
       - {name: l2_5}
-    - - 12.457519356990154
-      - -5.71316112005304
+    - - 14.16664397760703
+      - -5.426469770805844
       - {name: l2_6}
-    - - 12.280315644484794
-      - -4.43033939994584
+    - - 14.214164868203277
+      - -3.906314969837264
       - {name: l2_7}
     - - 7.952347895984936
       - -2.7816072751214485
@@ -394,25 +394,24 @@ levels:
     - - 9.763443763970521
       - -2.7839222869773215
       - {name: ''}
-    - - 9.148817623334018
-      - -0.906606041908252
+    - - 7.342669064527975
+      - 0.06492774191490458
       - {name: l2_14}
-    - - 10.548901444099634
-      - -0.9131295641440764
+    - - 9.754817188526722
+      - -0.20172075577559223
       - {name: l2_13}
-    - - 11.845501860007523
-      - -1.3981665875211324
+    - - 11.73619371806948
+      - -0.32916255712467724
       - {name: l2_12}
-    - - 12.351961664017004
-      - -2.4713121430308087
+    - - 13.744843590412167
+      - -0.6805128688059958
       - {name: l2_11}
     - - 9.901032435907545
       - -4.4206236604687605
       - {name: l2_10}
-    - - 13.888017479466065
-      - -3.397988936349286
+    - - 14.474391244152535
+      - -2.0457049174243735
       - {name: l2_15}
     - - 8.714698887437542
       - -4.523072424938969
       - {name: l2_9}
-
